--- a/css/style_index.css
+++ b/css/style_index.css
@@ -1,229 +1,752 @@
-body,header {
-    font-family: 'Poppins','Open Sans', sans-serif;
 
-}
+@media(max-width:767px){
+    body,header {
+        font-family: 'Poppins','Open Sans', sans-serif;
 
-
-ul{
-    list-style: none;
-}
-
-a{
-    text-decoration: none;
-    list-style: none;
-    color:white;
-}
+    }
 
 
+    ul{
+        list-style: none;
+    }
 
-.nav{
-    display:flex;
-    flex-wrap:nowrap;
-    align-items:center;
-    justify-content: space-between;
-    background-color: rgb(66, 64, 64);
-    box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+    a{
+        text-decoration: none;
+        list-style: none;
+        color:white;
+    }
 
-}
 
-@media (max-width:767px){
+
+    .nav{
+        display:flex;
+        flex-wrap:nowrap;
+        align-items:center;
+        justify-content: space-between;
+        background-color: rgb(66, 64, 64);
+        box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+
+    }
+
+
+
+    .logo {
+
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        align-items: center;
+        align-content:centeR;
+        justify-content:start;
+        gap:2px;
+        height:10%;
+        transition:0.2s;
+
+    }
+
+    .logo:hover{
+        padding-left:1%;
+    }
+
     .logo span{
         display:none;
     }
+
+
+    .logo img{
+        width:60px;
+        transition:0.4s;
+        opacity:1;
+        z-index:3
+
+    }
+
+    .logo:hover span{
+            margin-left:10px;
+            cursor:pointer;
+            opacity:1;
+    }
+
+    .logo:hover img,.logo:hover span{
+        cursor:pointer;
+
+    }
+
+
+
+
+
+    .nav_ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        display:flex;
+        align-items:center;
+        font-size:14px;
+    }
+
+
+    .nav_ul li{
+        margin-right:15px;
+        color:white;
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav{
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav:hover{
+        cursor:pointer;
+        background-color: white;
+        color:black;
+        border-radius: 8px;
+        padding:10px;
+    }
+
+    .nav_ul li a{
+        text-decoration:none;
+    }
+
+    .opcion_boton-nav-activo{
+        background-color: white;
+        color:black;
+        border-radius:8px;
+        padding:10px;
+    }
+
+    .container_main{
+        margin:auto;
+        width:100%;
+        display:flex;
+        flex-direction:column;
+
+    }
+
+    /* Slider */
+
+
+
+    .slider{
+        margin-top:50px;
+        width:100%;
+        height:100%;
+        background:rgb(255, 255, 255);
+        margin-bottom:50px;
+
+
+    }
+
+    .slider--inner{
+        display:grid;
+        align-items:center;
+        grid-template-columns: repeat(2,1fr);
+        row-gap: 10px;
+        column-gap:10px;
+
+
+
+    }
+
+    .slider--inner .img-slider{
+        width:100%;
+        height:100%;
+        border-radius:8px;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.892);
+    }
+
+
+    .slider--inner .img-slider img{
+        aspect-ratio:16/9;
+        object-fit:contain;
+        width:100%;
+        height:100%;
+
+    }
+
+
+
+
+    /* Main */
+
+    .container_main_titulo{
+        padding-top:10px;
+        width:90%;
+        padding-bottom:5px;
+        border-bottom: solid rgb(66, 64, 64);
+    }
+    .container_main h1{
+        font-size: 20px;
+        margin-left:5%;
+        color: rgb(66, 64, 64);
+    }
+
+    .container_main_juegos{
+
+        margin-top:3%;
+        margin-left:2%;
+        padding:10px;
+        display:grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 30px;
+        width:90%;
+        height:50%;
+
+        
+    }
+
+    .juego a{
+        text-decoration: none;
+        color:rgba(0, 0, 0, 1);
+        display:inline-flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .juego img{
+        margin-left:2%;
+        width:100%;
+        border-radius: 8px;
+        transition:0.4s;
+
+    }
+
+    .juego img:hover{
+        cursor: pointer;
+        margin-bottom:1%;
+        scale:1.05;
+        box-shadow: 0px 3px 10px rgba(0, 0, 0, 1);
+    }
+
+    .titulo_juego{
+        margin-left:2%;
+
+    }
+
+    .titulo_juego h2{
+        text-decoration: none;
+        font-size: 16px;
+
+    }
+
 }
 
 
 
-.logo {
-
-    display:flex;
-    flex-direction:row;
-    flex-wrap:nowrap;
-    align-items: center;
-    align-content:centeR;
-    justify-content:start;
-    gap:2px;
-    height:10%;
-    transition:0.2s;
-
-}
-
-.logo:hover{
-    padding-left:1%;
-}
-
-.logo span{
-    margin-left:-15px;
-    display:show;
-    color: white;
-    text-align:center;
-    position:absolute;
-    transition:0.4s;
-    opacity:0;
-    z-index:2;
-}
-
-
-.logo img{
-    width:70px;
-    transition:0.4s;
-    opacity:1;
-    z-index:3
-
-}
-
-.logo:hover span{
-    margin-left:10px;
-    cursor:pointer;
-    opacity:1;
-}
-
-.logo:hover img,.logo:hover span{
-    cursor:pointer;
-
-}
-
-.nav_ul{
-    list-style-type: none;
-    margin:0;
-    padding:0;
-    display:flex;
-    align-items:center;
-}
-
-
-.nav_ul li{
-    margin-right:15px;
-    color:white;
-    transition:0.4s;
-}
-
-.opcion_boton-nav{
-    transition:0.4s;
-}
-
-.opcion_boton-nav:hover{
-    cursor:pointer;
-    background-color: white;
-    color:black;
-    border-radius: 8px;
-    padding:10px;
-}
-
-.nav_ul li a{
-    text-decoration:none;
-}
-
-.opcion_boton-nav-activo{
-    background-color: white;
-    color:black;
-    border-radius:8px;
-    padding:10px;
-}
-
-.container_main{
-    padding-top:5%;
-}
-
-/* Slider */
-
-.slider{
-
-    width:100%;
-    height:300px;
-    background:rgb(255, 255, 255);
-    margin-bottom:100px;
-
-}
-
-.slider--inner{
-    display:flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    width:100%;
-    height: 100%;
-    transition:0.4s;
-    gap:3px;
-
-}
-
-.slider--inner .img-slider{
-    aspect-ratio:16/9;
-    object-fit:contain;
-    max-width:100%;
-    height:100%;
-    transition: 0.2s ease-in;
-}
 
 
 
 
-.slider--inner .img-slider:hover{
-    cursor: pointer;
-    scale:1.1;
-    box-shadow: 2px 8px 4px rgba(0, 0, 0, 0.892);
-    margin-left:25px;
-    margin-right:25px;
 
-}
 
-/* Main */
+@media (min-width:767px) and (max-width:1023px){
 
-.container_main_titulo{
-    width:80%;
-    padding-bottom:5px;
-    border-bottom: solid rgb(66, 64, 64);
-}
-.container_main h1{
-    font-size: 28px;
-    margin-left:5%;
-    color: rgb(66, 64, 64);
-}
+    body,header {
+        font-family: 'Poppins','Open Sans', sans-serif;
 
-.container_main_juegos{
+    }
 
-    margin-top:3%;
-    padding:10px;
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-gap: 30px;
-    width:80%;
-    height:50%;
+
+    ul{
+        list-style: none;
+    }
+
+    a{
+        text-decoration: none;
+        list-style: none;
+        color:white;
+    }
+
+
+
+    .nav{
+        display:flex;
+        flex-wrap:nowrap;
+        align-items:center;
+        justify-content: space-between;
+        background-color: rgb(66, 64, 64);
+        box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+
+    }
+
+
+
+    .logo {
+
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        align-items: center;
+        align-content:center;
+        justify-content:start;
+        gap:2px;
+        height:10%;
+        transition:0.2s;
+
+    }
+
+    .logo:hover{
+        padding-left:1%;
+    }
+
+    .logo span{
+        display:none;
+    }
+
+
+    .logo img{
+        width:60px;
+        transition:0.4s;
+        opacity:1;
+        z-index:3
+
+    }
+
+    .logo:hover span{
+        margin-left:10px;
+        cursor:pointer;
+        opacity:1;
+    }
+
+    .logo:hover img,.logo:hover span{
+        cursor:pointer;
+
+    }
+
+
+
+
+
+    .nav_ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        display:flex;
+        align-items:center;
+        font-size:18px;
+    }
+
+
+    .nav_ul li{
+        margin-right:15px;
+        color:white;
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav{
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav:hover{
+        cursor:pointer;
+        background-color: white;
+        color:black;
+        border-radius: 8px;
+        padding:10px;
+    }
+
+    .nav_ul li a{
+        text-decoration:none;
+    }
+
+    .opcion_boton-nav-activo{
+        background-color: white;
+        color:black;
+        border-radius:8px;
+        padding:10px;
+    }
+
+    .container_main{
+        margin:auto;
+        width:100%;
+        display:flex;
+        flex-direction:column;
+
+    }
+
+    /* Slider */
+
+
+
+    .slider{
+        margin-top:50px;
+        width:100%;
+        height:100%;
+        background:rgb(255, 255, 255);
+        margin-bottom:50px;
+
+
+    }
+
+    .slider--inner{
+        display:grid;
+        align-items:center;
+        grid-template-columns: repeat(2,1fr);
+        row-gap: 10px;
+        column-gap:10px;
+
+
+
+    }
+
+    .slider--inner .img-slider{
+        width:100%;
+        height:100%;
+        border-radius:8px;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.892);
+    }
+
+    
+    .slider--inner .img-slider img{
+        aspect-ratio:16/9;
+        object-fit:contain;
+        width:100%;
+        height:100%;
+        transition: 0.4s;
+
+    }
+
+    .slider--inner .img-slider:hover{
+        filter:brightness(1.1);
+    }
+
+
+
+    /* Main */
+
+    .container_main_titulo{
+        margin-top:20px;
+        width:90%;
+        border-bottom: solid 4px rgb(66, 64, 64);
+
+
+    }
+    .container_main h1{
+        transition:0.4s;
+        font-size: 24px;
+        margin-left:5%;
+        color: rgb(66, 64, 64);
+    }
+
+    .container_main_juegos{
+
+        margin-top:3%;
+        margin-left:2%;
+        padding:10px;
+        display:grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 30px;
+        width:90%;
+        height:50%;
+
+        
+    }
+
+    .juego a{
+        text-decoration: none;
+        color:rgba(0, 0, 0, 1);
+        display:inline-flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .juego img{
+        margin-left:2%;
+        width:100%;
+        border-radius: 8px;
+        transition:0.4s;
+        box-shadow: 0px 3px 10px rgba(0, 0, 0, 1);
+
+    }
+
+    .juego img:hover{
+        filter:brightness(1.1)
+    }
+    .titulo_juego{
+        margin-left:2%;
+
+    }
+
+    .titulo_juego h2{
+        text-decoration: none;
+        font-size: 18px;
+
+    }
 
     
 }
 
-.juego a{
-    text-decoration: none;
-    color:rgba(0, 0, 0, 1);
-    display:inline-flex;
-    flex-direction: column;
-    align-items: center;
+
+
+
+
+
+
+
+
+
+
+@media(min-width:1024px){
+
+
+    body,header {
+        font-family: 'Poppins','Open Sans', sans-serif;
+
+    }
+
+
+    ul{
+        list-style: none;
+    }
+
+    a{
+        text-decoration: none;
+        list-style: none;
+        color:white;
+    }
+
+
+
+    .nav{
+        display:flex;
+        flex-wrap:nowrap;
+        align-items:center;
+        justify-content: space-between;
+        background-color: rgb(66, 64, 64);
+        box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+
+    }
+
+
+
+    .logo {
+
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        align-items: center;
+        align-content:centeR;
+        justify-content:start;
+        gap:2px;
+        height:10%;
+        transition:0.2s;
+
+    }
+
+    .logo:hover{
+        padding-left:1%;
+    }
+
+    .logo span{
+        margin-left:-15px;
+        display:show;
+        color: white;
+        text-align:center;
+        position:absolute;
+        transition:0.4s;
+        opacity:0;
+        z-index:2;
+    }
+
+
+    .logo img{
+        width:70px;
+        transition:0.4s;
+        opacity:1;
+        z-index:3
+
+    }
+
+    .logo:hover span{
+        margin-left:10px;
+        cursor:pointer;
+        opacity:1;
+    }
+
+    .logo:hover img,.logo:hover span{
+        cursor:pointer;
+
+    }
+
+
+
+
+
+    .nav_ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        display:flex;
+        align-items:center;
+    }
+
+
+    .nav_ul li{
+        margin-right:15px;
+        color:white;
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav{
+        transition:0.4s;
+        padding:10px;
+        border-radius:8px;
+
+    }
+
+    .opcion_boton-nav:hover{
+        cursor:pointer;
+        background-color: white;
+        color:black;
+
+
+    }
+
+    .nav_ul li a{
+        text-decoration:none;
+    }
+
+    .opcion_boton-nav-activo{
+        background-color: white;
+        color:black;
+        border-radius:8px;
+        padding:10px;
+    }
+
+    .container_main{
+        padding-top:5%;
+        width:100%;
+        padding-bottom:5%;
+
+    }
+
+    /* Slider */
+
+
+
+    .slider{
+
+        width:100%;
+        height:70%;
+
+    }
+
+    .slider--inner{
+
+        display:flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: center;
+        flex-wrap:nowrap;
+        width:100%;
+        height:100%;
+        transition:0.4s;
+        overflow: hidden;
+        gap:3px;
+    }
+
+    .slider--inner .slider-img{
+        display:flex;
+        flex-direction:column;
+        align-items:start;
+        border-radius:8px;
+        width:50%;
+        height:50%;
+        box-shadow: 2px 4px 2px rgba(0, 0, 0, 0.445);
+        transition:0.4s;
+    }
+
+    .slider--inner .img-slider img{
+
+        border-radius:8px;
+        aspect-ratio:16/9;
+        object-fit:cover;
+        width:100%;
+        height:50%;
+        transition: 0.4s;
+
+    }
+
+    .slider--inner .img-slider{
+        transition: 0.4s;
+
+    }
+
+
+    .slider--inner .img-slider:hover img:hover{
+        cursor: pointer;
+        scale:1.00;
+        box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.445);
+        transform:translateY(15px);
+
+    }
+
+
+
+    /* Main */
+
+    .container_main_titulo{
+        display:flex;
+        align-items:center;
+        background-color: rgb(108, 37, 134);
+        width:90%;
+        height:7%;
+        margin-bottom:10px;
+        border-bottom: solid rgb(66, 64, 64);
+        box-shadow: 2px 4px 4px rgba(7, 7, 7, 0.465);
+    }
+    .container_main h1{
+        font-size: 28px;
+        margin-left:5%;
+        color: rgb(255, 255, 255);
+        text-shadow: 0 2px 3px black;
+    }
+
+    .container_main_juegos{
+
+        margin-top:3%;
+        padding:10px;
+        display:grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-gap: 30px;
+        width:80%;
+        height:50%;
+
+        
+    }
+
+    .juego a{
+        text-decoration: none;
+        color:rgba(0, 0, 0, 1);
+        display:inline-flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .juego img{
+        margin-left:2%;
+        width:70%;
+        border-radius: 8px;
+        transition:0.4s;
+
+    }
+
+    .juego img:hover{
+        cursor: pointer;
+        margin-bottom:1%;
+        scale:1.05;
+        box-shadow: 0px 3px 10px rgba(0, 0, 0, 1);
+    }
+
+    .titulo_juego{
+        margin-left:2%;
+
+    }
+
+    .titulo_juego h2{
+        text-decoration: none;
+        font-size: 16px;
+
+    }
+
 }
-
-.juego img{
-    margin-left:2%;
-    width:70%;
-    border-radius: 8px;
-    transition:0.4s;
-
-}
-
-.juego img:hover{
-    cursor: pointer;
-    margin-bottom:1%;
-    scale:1.05;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 1);
-}
-
-.titulo_juego{
-    margin-left:2%;
-
-}
-
-.titulo_juego h2{
-    text-decoration: none;
-    font-size: 16px;
-
-}
-
