--- a/css/style_juego.css
+++ b/css/style_juego.css
@@ -1,164 +1,508 @@
-body,header {
-    font-family: 'Poppins','Open Sans', sans-serif;
+@media(max-width:767px){
 
-}
+    body,header {
+        font-family: 'Poppins','Open Sans', sans-serif;
 
-
-ul{
-    list-style: none;
-}
-
-a{
-    text-decoration: none;
-    list-style: none;
-    color:white;
-}
+    }
 
 
+    ul{
+        list-style: none;
+    }
 
-.nav{
-    display:flex;
-    flex-wrap:nowrap;
-    align-items:center;
-    justify-content: space-between;
-    background-color: rgb(66, 64, 64);
-    box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+    a{
+        text-decoration: none;
+        list-style: none;
+        color:white;
+    }
 
-}
 
-@media (max-width:767px){
+
+    .nav{
+        display:flex;
+        flex-wrap:nowrap;
+        align-items:center;
+        justify-content: space-between;
+        background-color: rgb(66, 64, 64);
+        box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+
+    }
+
+
+
+    .logo {
+
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        align-items: center;
+        align-content:centeR;
+        justify-content:start;
+        gap:2px;
+        height:10%;
+        transition:0.2s;
+
+    }
+
+    .logo:hover{
+        padding-left:1%;
+    }
+
     .logo span{
         display:none;
+    }
+
+
+    .logo img{
+        width:60px;
+        transition:0.4s;
+        opacity:1;
+        z-index:3
+
+    }
+
+    .logo:hover span{
+            margin-left:10px;
+            cursor:pointer;
+            opacity:1;
+    }
+
+    .logo:hover img,.logo:hover span{
+        cursor:pointer;
+
+    }
+
+
+
+
+
+    .nav_ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        display:flex;
+        align-items:center;
+        font-size:14px;
+    }
+
+
+    .nav_ul li{
+        margin-right:15px;
+        color:white;
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav{
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav:hover{
+        cursor:pointer;
+        background-color: white;
+        color:black;
+        border-radius: 8px;
+        padding:10px;
+    }
+
+    .nav_ul li a{
+        text-decoration:none;
+    }
+
+    .opcion_boton-nav-activo{
+        background-color: white;
+        color:black;
+        border-radius:8px;
+        padding:10px;
+    }
+    .container_main{
+        padding-top:5%;
+    }
+
+    .container_main_titulo{
+        width:80%;
+        padding-bottom:5px;
+        border-bottom: solid rgb(66, 64, 64);
+    }
+    .container_main h1{
+        font-size: 20px;
+        margin-left:5%;
+        color: rgb(66, 64, 64);
+    }
+
+    .container_main_juegos{
+        width:100%;
+        height:100%;
+    }
+
+
+    .container_main_juegos .container_juego{
+
+        margin-top:1%;
+        display:flex;
+
+        flex-direction: column;
+        align-items: center;
+        width:100%;
+        height:90%;
+        background-color: black;
+
+        
+    }
+
+    .container_juego iframe {
+        background-color: white;
+        margin-top:2%;
+        width:80%;
+        height:80%;
     }
 }
 
 
 
-.logo {
 
-    display:flex;
-    flex-direction:row;
-    flex-wrap:nowrap;
-    align-items: center;
-    align-content:centeR;
-    justify-content:start;
-    gap:2px;
-    height:10%;
-    transition:0.2s;
+@media(min-width:767px) and (max-width: 1023px){
 
+    body,header {
+        font-family: 'Poppins','Open Sans', sans-serif;
+
+    }
+
+
+    ul{
+        list-style: none;
+    }
+
+    a{
+        text-decoration: none;
+        list-style: none;
+        color:white;
+    }
+
+
+
+    .nav{
+        display:flex;
+        flex-wrap:nowrap;
+        align-items:center;
+        justify-content: space-between;
+        background-color: rgb(66, 64, 64);
+        box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+
+    }
+
+
+
+    .logo {
+
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        align-items: center;
+        align-content:centeR;
+        justify-content:start;
+        gap:2px;
+        height:10%;
+        transition:0.2s;
+
+    }
+
+    .logo:hover{
+        padding-left:1%;
+    }
+
+    .logo span{
+        margin-left:-15px;
+        display:show;
+        color: white;
+        text-align:center;
+        position:absolute;
+        transition:0.4s;
+        opacity:0;
+        z-index:2;
+    }
+
+
+    .logo img{
+        width:70px;
+        transition:0.4s;
+        opacity:1;
+        z-index:3
+
+    }
+
+    .logo:hover span{
+        margin-left:10px;
+        cursor:pointer;
+        opacity:1;
+    }
+
+    .logo:hover img,.logo:hover span{
+        cursor:pointer;
+
+    }
+
+
+
+
+
+    .nav_ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        display:flex;
+        align-items:center;
+    }
+
+
+    .nav_ul li{
+        margin-right:15px;
+        color:white;
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav{
+        transition:0.4s;
+        padding:10px;
+        border-radius:8px;
+
+    }
+
+    .opcion_boton-nav:hover{
+        cursor:pointer;
+        background-color: white;
+        color:black;
+
+
+    }
+
+    .nav_ul li a{
+        text-decoration:none;
+    }
+
+    .opcion_boton-nav-activo{
+        background-color: white;
+        color:black;
+        border-radius:8px;
+        padding:10px;
+    }
+
+    .container_main{
+        padding-top:5%;
+    }
+
+    .container_main_titulo{
+        width:80%;
+        padding-bottom:5px;
+        border-bottom: solid rgb(66, 64, 64);
+    }
+    .container_main h1{
+        font-size: 22px;
+        margin-left:5%;
+        color: rgb(66, 64, 64);
+    }
+
+    .container_main_juegos{
+        width:90%;
+        height:90%;
+    }
+
+
+    .container_main_juegos .container_juego{
+
+        margin-top:1%;
+        display:flex;
+
+        flex-direction: column;
+        align-items: center;
+        width:100%;
+        height:90%;
+        background-color: black;
+
+        
+    }
+
+    .container_juego iframe {
+        background-color: white;
+        margin-top:2%;
+        width:80%;
+        height:80%;
+    }
 }
 
-.logo:hover{
-    padding-left:1%;
+
+
+
+
+
+
+
+@media(min-width:1024px){
+
+
+    body,header {
+        font-family: 'Poppins','Open Sans', sans-serif;
+
+    }
+
+
+    ul{
+        list-style: none;
+    }
+
+    a{
+        text-decoration: none;
+        list-style: none;
+        color:white;
+    }
+
+
+
+    .nav{
+        display:flex;
+        flex-wrap:nowrap;
+        align-items:center;
+        justify-content: space-between;
+        background-color: rgb(66, 64, 64);
+        box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+
+    }
+
+
+
+    .logo {
+
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        align-items: center;
+        align-content:centeR;
+        justify-content:start;
+        gap:2px;
+        height:10%;
+        transition:0.2s;
+
+    }
+
+    .logo:hover{
+        padding-left:1%;
+    }
+
+    .logo span{
+        margin-left:-15px;
+        display:show;
+        color: white;
+        text-align:center;
+        position:absolute;
+        transition:0.4s;
+        opacity:0;
+        z-index:2;
+    }
+
+
+    .logo img{
+        width:70px;
+        transition:0.4s;
+        opacity:1;
+        z-index:3
+
+    }
+
+    .logo:hover span{
+        margin-left:10px;
+        cursor:pointer;
+        opacity:1;
+    }
+
+    .logo:hover img,.logo:hover span{
+        cursor:pointer;
+
+    }
+
+
+
+
+
+    .nav_ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        display:flex;
+        align-items:center;
+    }
+
+
+    .nav_ul li{
+        margin-right:15px;
+        color:white;
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav{
+        transition:0.4s;
+        padding:10px;
+        border-radius:8px;
+
+    }
+
+    .opcion_boton-nav:hover{
+        cursor:pointer;
+        background-color: white;
+        color:black;
+
+
+    }
+
+    .nav_ul li a{
+        text-decoration:none;
+    }
+
+    .opcion_boton-nav-activo{
+        background-color: white;
+        color:black;
+        border-radius:8px;
+        padding:10px;
+    }
+
+    .container_main{
+        padding-top:5%;
+    }
+
+    .container_main_titulo{
+        width:80%;
+        padding-bottom:5px;
+        border-bottom: solid rgb(66, 64, 64);
+    }
+    .container_main h1{
+        font-size: 28px;
+        margin-left:5%;
+        color: rgb(66, 64, 64);
+    }
+
+    .container_main_juegos{
+        width:80%;
+        height:70%;
+    }
+
+
+    .container_main_juegos .container_juego{
+
+        margin-top:1%;
+        display:flex;
+
+        flex-direction: column;
+        align-items: center;
+        width:100%;
+        height:90%;
+        background-color: black;
+
+        
+    }
+
+    .container_juego iframe {
+        background-color: white;
+        margin-top:2%;
+        width:80%;
+        height:80%;
+    }
+
 }
-
-.logo span{
-    margin-left:-15px;
-    display:show;
-    color: white;
-    text-align:center;
-    position:absolute;
-    transition:0.4s;
-    opacity:0;
-    z-index:2;
-}
-
-
-.logo img{
-    width:70px;
-    transition:0.4s;
-    opacity:1;
-    z-index:3
-
-}
-
-.logo:hover span{
-    margin-left:10px;
-    cursor:pointer;
-    opacity:1;
-}
-
-.logo:hover img,.logo:hover span{
-    cursor:pointer;
-
-}
-.nav_ul{
-    list-style-type: none;
-    margin:0;
-    padding:0;
-    display:flex;
-    align-items:center;
-}
-
-
-.nav_ul li{
-    margin-right:15px;
-    color:white;
-    transition:0.4s;
-}
-
-.opcion_boton-nav{
-    transition:0.4s;
-}
-
-.opcion_boton-nav:hover{
-    cursor:pointer;
-    background-color: white;
-    color:black;
-    border-radius: 8px;
-    padding:10px;
-}
-
-.nav_ul li a{
-    text-decoration:none;
-}
-
-.opcion_boton-nav-activo{
-    background-color: white;
-    color:black;
-    border-radius:8px;
-    padding:10px;
-}
-
-.container_main{
-    padding-top:5%;
-}
-
-.container_main_titulo{
-    width:80%;
-    padding-bottom:5px;
-    border-bottom: solid rgb(66, 64, 64);
-}
-.container_main h1{
-    font-size: 28px;
-    margin-left:5%;
-    color: rgb(66, 64, 64);
-}
-
-.container_main_juegos{
-    width:80%;
-    height:70%;
-}
-
-
-.container_main_juegos .container_juego{
-
-    margin-top:1%;
-    display:flex;
-
-    flex-direction: column;
-    align-items: center;
-    width:100%;
-    height:90%;
-    background-color: black;
-
-    
-}
-
-.container_juego iframe {
-    background-color: white;
-    margin-top:2%;
-    width:80%;
-    height:80%;
-}
-
