--- a/css/style_nosotros.css
+++ b/css/style_nosotros.css
@@ -1,175 +1,582 @@
-body,header {
-    font-family: 'Poppins','Open Sans', sans-serif;
+@media (max-width:767px){
+
+    body,header {
+        font-family: 'Poppins','Open Sans', sans-serif;
+
+    }
+
+
+    ul{
+        list-style: none;
+    }
+
+    a{
+        text-decoration: none;
+        list-style: none;
+        color:white;
+    }
+
+
+
+    .nav{
+        display:flex;
+        flex-wrap:nowrap;
+        align-items:center;
+        justify-content: space-between;
+        background-color: rgb(66, 64, 64);
+        box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+
+    }
+
+
+
+    .logo {
+
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        align-items: center;
+        align-content:centeR;
+        justify-content:start;
+        gap:2px;
+        height:10%;
+        transition:0.2s;
+
+    }
+
+    .logo:hover{
+        padding-left:1%;
+    }
+
+    .logo span{
+        display:none;
+    }
+
+
+    .logo img{
+        width:60px;
+        transition:0.4s;
+        opacity:1;
+        z-index:3
+
+    }
+
+    .logo:hover span{
+            margin-left:10px;
+            cursor:pointer;
+            opacity:1;
+    }
+
+    .logo:hover img,.logo:hover span{
+        cursor:pointer;
+
+    }
+
+
+
+
+
+    .nav_ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        display:flex;
+        align-items:center;
+        font-size:14px;
+    }
+
+
+    .nav_ul li{
+        margin-right:15px;
+        color:white;
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav{
+        transition:0.4s;
+        border-radius: 8px;
+        padding:8px;
+    }
+
+    .opcion_boton-nav:hover{
+        cursor:pointer;
+        background-color: white;
+        color:black;
+
+    }
+
+    .nav_ul li a{
+        text-decoration:none;
+    }
+
+    .opcion_boton-nav-activo{
+        background-color: white;
+        color:black;
+        border-radius:8px;
+        padding:8px;
+    }
+    .container_main{
+        width:100%;
+
+    }
+
+
+    .container_main_titulo{
+        width:80%;
+        padding-bottom:5px;
+        border-bottom: solid rgb(66, 64, 64);
+    }
+    .container_main h1{
+        font-size: 28px;
+        margin-left:5%;
+        color: rgb(66, 64, 64);
+    }
+
+
+    .background_nosotros{
+        display:flex;
+        justify-content:center;
+        align-items: center;
+        width:100%;
+        height:100%;
+
+
+    }
+
+    .background_nosotros .img_background{
+        filter:blur(3px);
+        position:absolute;
+        width:cal(100% + 3px);
+        height:100%;
+        aspect-ratio:16/9;
+        z-index:-4;
+        object-fit: cover;
+
+    }
+
+    .bloque_nosotros{
+        position:absolute;
+        width:90%;
+        display:flex;
+        flex-direction:row;
+        flex-wrap: nowrap;
+        justify-content:space-around;
+        background-color:rgba(0, 0, 0, 0.477);  
+        z-index:99;
+        align-items:center;
+        box-shadow: 0px 0 15px 0px purple;
+
+    }
+
+    .bloque_nosotros p{
+        color:rgba(255, 255, 255, 0.693);
+        margin-left:5%;
+        margin-right:5%;
+        font-size: 12px;
+    }
+
+    .bloque_nosotros .img_personal{
+        filter:brightness(0.9);
+        width:20%;
+
+    }
+
 
 }
 
 
-ul{
-    text-decoration:none;
-    list-style: none;
+
+
+@media (min-width:767px) and (max-width:1023px){
+
+    body,header {
+        font-family: 'Poppins','Open Sans', sans-serif;
+
+    }
+
+
+    ul{
+        list-style: none;
+    }
+
+    a{
+        text-decoration: none;
+        list-style: none;
+        color:white;
+    }
+
+
+
+    .nav{
+        display:flex;
+        flex-wrap:nowrap;
+        align-items:center;
+        justify-content: space-between;
+        background-color: rgb(66, 64, 64);
+        box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+
+    }
+
+
+
+    .logo {
+
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        align-items: center;
+        justify-content:start;
+        gap:2px;
+        height:10%;
+        transition:0.2s;
+
+    }
+
+    .logo:hover{
+        padding-left:1%;
+    }
+
+    .logo span{
+        margin-left:-15px;
+        display:show;
+        color: white;
+        text-align:center;
+        position:absolute;
+        transition:0.4s;
+        opacity:0;
+        z-index:2;
+    }
+
+
+    .logo img{
+        width:70px;
+        transition:0.4s;
+        opacity:1;
+        z-index:3
+
+    }
+
+    .logo:hover span{
+        margin-left:15px;
+        cursor:pointer;
+        opacity:1;
+    }
+
+    .logo:hover img,.logo:hover span{
+        cursor:pointer;
+
+    }
+
+
+
+
+
+    .nav_ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        display:flex;
+        align-items:center;
+    }
+
+
+    .nav_ul li{
+        margin-right:15px;
+        color:white;
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav{
+        transition:0.4s;
+        padding:10px;
+        border-radius:8px;
+
+    }
+
+    .opcion_boton-nav:hover{
+        cursor:pointer;
+        background-color: white;
+        color:black;
+
+
+    }
+
+    .nav_ul li a{
+        text-decoration:none;
+    }
+
+    .opcion_boton-nav-activo{
+        background-color: white;
+        color:black;
+        border-radius:8px;
+        padding:10px;
+    }
+    .container_main{
+        width:100%;
+
+    }
+
+
+    .container_main_titulo{
+        width:80%;
+        padding-bottom:5px;
+        border-bottom: solid rgb(66, 64, 64);
+    }
+    .container_main h1{
+        font-size: 28px;
+        margin-left:5%;
+        color: rgb(66, 64, 64);
+    }
+
+
+    .background_nosotros{
+        display:flex;
+        justify-content:center;
+        align-items: center;
+        width:100%;
+        height:100%;
+
+
+    }
+
+    .background_nosotros .img_background{
+        filter:blur(3px);
+        position:absolute;
+        width:100%;
+        height:100%;
+        aspect-ratio:16/9;
+        z-index:-4;
+        object-fit: cover;
+    }
+
+    .bloque_nosotros{
+        position:absolute;
+        width:90%;
+        display:flex;
+        flex-direction:row;
+        flex-wrap: nowrap;
+        justify-content:space-around;
+        background-color:rgba(0, 0, 0, 0.477);  
+        z-index:99;
+        align-items:center;
+        box-shadow: 0px 0 15px 0px purple;
+
+    }
+
+    .bloque_nosotros p{
+        color:rgba(255, 255, 255, 0.693);
+        margin-left:5%;
+        margin-right:5%;
+        font-size: 14px;
+    }
+
+    .bloque_nosotros .img_personal{
+        filter:brightness(0.9);
+        width:20%;
+
+    }
+
+
 }
 
-a{
-    text-decoration: none;
-    list-style: none;
-    color:white;
+
+
+
+
+
+
+
+
+
+@media (min-width:1023px){
+
+    body,header {
+        font-family: 'Poppins','Open Sans', sans-serif;
+
+    }
+
+
+    ul{
+        list-style: none;
+    }
+
+    a{
+        text-decoration: none;
+        list-style: none;
+        color:white;
+    }
+
+
+
+    .nav{
+        display:flex;
+        flex-wrap:nowrap;
+        align-items:center;
+        justify-content: space-between;
+        background-color: rgb(66, 64, 64);
+        box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
+
+    }
+
+
+
+    .logo {
+
+        display:flex;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        align-items: center;
+        justify-content:start;
+        gap:2px;
+        height:10%;
+        transition:0.2s;
+
+    }
+
+    .logo:hover{
+        padding-left:1%;
+    }
+
+    .logo span{
+        margin-left:-15px;
+        display:show;
+        color: white;
+        text-align:center;
+        position:absolute;
+        transition:0.4s;
+        opacity:0;
+        z-index:2;
+    }
+
+
+    .logo img{
+        width:70px;
+        transition:0.4s;
+        opacity:1;
+        z-index:3
+
+    }
+
+    .logo:hover span{
+        margin-left:15px;
+        cursor:pointer;
+        opacity:1;
+    }
+
+    .logo:hover img,.logo:hover span{
+        cursor:pointer;
+
+    }
+
+
+
+
+
+    .nav_ul{
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        display:flex;
+        align-items:center;
+    }
+
+
+    .nav_ul li{
+        margin-right:15px;
+        color:white;
+        transition:0.4s;
+    }
+
+    .opcion_boton-nav{
+        transition:0.4s;
+        padding:10px;
+        border-radius:8px;
+
+    }
+
+    .opcion_boton-nav:hover{
+        cursor:pointer;
+        background-color: white;
+        color:black;
+
+
+    }
+
+    .nav_ul li a{
+        text-decoration:none;
+    }
+
+    .opcion_boton-nav-activo{
+        background-color: white;
+        color:black;
+        border-radius:8px;
+        padding:10px;
+    }
+    .container_main{
+        width:100%;
+
+    }
+
+
+    .container_main_titulo{
+        width:80%;
+        padding-bottom:5px;
+        border-bottom: solid rgb(66, 64, 64);
+    }
+    .container_main h1{
+        font-size: 28px;
+        margin-left:5%;
+        color: rgb(66, 64, 64);
+    }
+
+
+    .background_nosotros{
+        display:flex;
+        justify-content:center;
+        align-items: center;
+        width:100%;
+        height:100%;
+
+
+    }
+
+    .background_nosotros .img_background{
+        filter:blur(3px);
+        position:absolute;
+        width:100%;
+        height:100%;
+        aspect-ratio:16/9;
+        z-index:-4;
+        object-fit: cover;
+    }
+
+    .bloque_nosotros{
+        position:absolute;
+        width:80%;
+        display:flex;
+        flex-direction:row;
+        flex-wrap: nowrap;
+        justify-content:space-around;
+        background-color:rgba(0, 0, 0, 0.477);  
+        z-index:99;
+        align-items:center;
+        box-shadow: 0px 0 15px 0px purple;
+
+    }
+
+    .bloque_nosotros p{
+        color:rgba(255, 255, 255, 0.693);
+        margin-left:5%;
+        margin-right:5%;
+    }
+
+    .bloque_nosotros .img_personal{
+        filter:brightness(0.9);
+        width:20%;
+
+    }
+
+
 }
-
-
-
-.nav{
-    display:flex;
-    flex-wrap:nowrap;
-    align-items:center;
-    justify-content: space-between;
-    background-color: rgb(66, 64, 64);
-    box-shadow: 0px 10px 0px rgba(0,0,0,0.2);
-
-}
-
-
-
-.logo span{
-    margin-left:2%;
-    color: white;
-    text-align:center;
-    position:absolute;
-    top:4%;
-    transition:0.4s;
-    opacity:0;
-    z-index:2;
-}
-
-
-.logo img{
-    width:70px;
-    margin-right:15px;
-    transition:0.4s;
-    opacity:1;
-    z-index:3
-
-}
-
-.logo {
-    height:10%;
-    transition:0.2s;
-
-}
-
-.logo:hover span{
-    padding-left:3%;
-    cursor:pointer;
-    opacity:1;
-}
-
-.logo:hover img{
-    padding-left:10%;
-    cursor:pointer;
-
-}
-
-.nav_ul{
-    list-style-type: none;
-    text-decoration:none;
-    margin:0;
-    padding:0;
-    display:flex;
-    align-items:center;
-}
-
-
-.nav_ul li{
-    margin-right:15px;
-    color:white;
-    transition:0.4s;
-}
-
-.opcion_boton-nav{
-    transition:0.4s;
-}
-
-.opcion_boton-nav:hover{
-    cursor:pointer;
-    background-color: white;
-    color:black;
-    border-radius: 8px;
-    padding:10px;
-}
-
-.nav_ul li a{
-    text-decoration:none;
-}
-
-.opcion_boton-nav-activo{
-    background-color: white;
-    color:black;
-    border-radius:8px;
-    padding:10px;
-}
-
-.container_main{
-
-}
-
-
-.container_main_titulo{
-    width:80%;
-    padding-bottom:5px;
-    border-bottom: solid rgb(66, 64, 64);
-}
-.container_main h1{
-    font-size: 28px;
-    margin-left:5%;
-    color: rgb(66, 64, 64);
-}
-
-
-.background_nosotros{
-    display:flex;
-    justify-content:center;
-    align-items: center;
-    width:100%;
-    height:100%;
-
-
-}
-
-.background_nosotros .img_background{
-    filter:blur(4px);
-    position:absolute;
-    width:100%;
-    height:100%;
-    aspect-ratio:16/9;
-    z-index:-4;
-}
-
-.bloque_nosotros{
-    position:absolute;
-    width:80%;
-    display:flex;
-    flex-direction:row;
-    flex-wrap: nowrap;
-    justify-content:space-around;
-    background-color:rgba(0, 0, 0, 0.477);  
-    z-index:99;
-    align-items:center;
-    box-shadow: 0px 0 15px 0px purple;
-
-}
-
-.bloque_nosotros p{
-    color:rgba(255, 255, 255, 0.693);
-    margin-left:5%;
-    margin-right:5%;
-}
-
-.bloque_nosotros .img_personal{
-    filter:brightness(10px);
-    width:20%;
-
-}
-
-
-
 
 
